* Collapse can now be instantiated after the tree too, some style fixes

--- a/Css/Tree.css
+++ b/Css/Tree.css
@@ -54,6 +54,11 @@ div.treeIndicator {
 	line-height: 1px;
 }
 
+li.drag {
+	position: absolute;
+	z-index: 50;
+}
+
 li.drag span.dispose {
 	display: none;
 }
